move files to server